--- a/templates/User/editprofile.html
+++ b/templates/User/editprofile.html
@@ -22,7 +22,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="recipient-email" class="col-form-label">Email</label>
-                                <input type="email" class="form-control" placeholder="Email" value="{{current_user.email}}"" name="email" id="recipient-email" required="">
+                                <input type="email" class="form-control" placeholder="Email" value="{{current_user.email}}" name="email" id="recipient-email" required="">
                             </div>
                             <div class="form-group">
                                 <label for="recipient-email" class="col-form-label">Contact</label>
