--- a/templates/User/booking.html
+++ b/templates/User/booking.html
@@ -1,121 +1,114 @@
-<!-- {% extends 'user/master.html' %}
-
-    {% block content %}
-
-
-
-    <section class="bookingride">
-        <div class="row">
-            <div class="col-lg-3" style=" height: 810px;">
-                <div class="" style="width: 100%; height: 50%;">
-                    <div class="">
-                        <div id="accordion">
-                            <div class="card">
-                            <div class="card-header" id="headingOne">
-                                <h5 class="mb-0">
-                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                    <i class="fa fa-home" aria-hidden="true"></i>&nbsp &nbsp
-                                    Choose from a Saved Trip
-                                </button>
-                                </h5>
-                            </div>
-                        
-                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                                <div class="card-body text-dark">
-                                    <a href="">1. Home</a> 
-                                </div>
-                            </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header id="headingTwo">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp &nbsp
-                                    Enter new location
-                                    </button>
-                                </h5>
-                                </div>
-                                <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
-                                <div class="card-body text-dark">
-                                    <h5 class="card-title">Enter Origin and Destination</h5>
-                                    <form id="send_location_info" class="mt-4" action="" method="POST">
-                                        <div class="form-group">
-                                        <input type="text" class="form-control" id="origin" placeholder="Origin">
-                                        </div>
-                                        <div class="form-group">
-                                        <input type="text" class="form-control" id="destination" placeholder="Destination">
-                                        </div>
-                                        
-                                        <input type="hidden" id="origin_lat" value="" name="origin_lat">
-                                        <input type="hidden" id="destination_lat" value="" name="destination_lat">
-                                        <input type="hidden" id='origin_lng' value="" name="origin_lng">
-                                        <input type="hidden" id="destination_lng" value="" name="destination_lng">
-                                    </form>
-                                    <div class="form-group">
-                                        <button onclick="getDirections()" type="text" class=" form-control btn btn-warning text-white btn-sm"><b>Confirm</b></button>
-                                    </div>
-                                    <br><br>
-                                    <h6 class="display-5">Enter Complete Address</h6>
-                                    
-                                    <form id="send_address" class="mt-4" action="" method="POST">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" id="floor" placeholder="HOUSE / FLAT / BLOCK NO.">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" id="floor" placeholder="APARTMENT / COMPLEX NAME">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" id="floor" placeholder="LANDMARK">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" id="floor" placeholder="ZIPCODE">
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" id="floor" placeholder="DIRECTIONS TO REACH">
-                                        </div>
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                    </form>
-                                </div>
-                                </div>
-                            </div>
-                        </div>
-                    <br><br>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-9">
-				<br>
-			    <div class="row">
-				  <div class="col-lg-12" style="padding-right: 40px;"> 
-                    <div id="map" style="height: 700px;">
-
-                    </div> 
-				  </div>
-			    </div>
-			</div>
-        </div>
-    </section>
-    
-    {% endblock %} -->
-
 {% extends 'user/master.html' %}
+    {% block header %}
+	<div style="height: 90px; background-color: #252525;">
+	</div>
+	{% endblock %}
 
-    <!-- {% block header %}
-    <div style="height: 90px; background-color: #252525;"></div>
-    {% endblock %} -->
-    
     {% block content %}
-    <!-- Contact -->
+
+    <!-- Booking -->
     <section class="bookingride">
+        <!-- <div class="row">
+			<div class="col-lg-3" style=" height: 830px;">
+				<div class="card text-white bg-dark mb-3 border-warning" style="width: 100%; height: 100%;">
+					<div class="card-body">
+						<div id="accordion">
+							<div class="card">
+							  <div class="card-header" id="headingOne">
+								<h5 class="mb-0">
+								  <button class="btn btn-link" style="text-decoration: none;" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+									<i class="fa fa-home" aria-hidden="true"></i>&nbsp &nbsp
+									Choose from a Saved Trip
+								  </button>
+								</h5>
+							  </div>
+						  
+							  <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+								<div class="card-body text-dark">
+									<a href="">1. Home</a> 
+								</div>
+							  </div>
+							</div>
+							<hr class="white">
+							<div class="card">
+								<div class="card-header" id="headingTwo">
+								  <h5 class="mb-0">
+									<button class="btn btn-link collapsed" style="text-decoration: none;" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+									<i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp &nbsp
+									  Enter new location
+									</button>
+								  </h5>
+								</div>
+								<div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
+								  <div class="card-body text-dark">
+									<h5 class="card-title">Enter Origin and Destination</h5>
+									<form id="send_location_info" class="mt-4" action="" method="POST">
+										<div class="form-group">
+										<input required type="text" class="form-control" value="{% if name %} {{name[0]}} {% endif %}" id="origin" placeholder="Origin">
+										</div>
+										<div class="form-group">
+										<input required type="text" class="form-control" value="{% if name %} {{name[1]}} {% endif %}" id="destination" placeholder="Destination">
+										</div>
+										<input type="hidden" id="origin_coordinates" value="" name="origin_coordinates">
+										<input type="hidden" id="destination_coordinates" value="" name="destination_coordinates">
+										<input type="hidden" id='origin_place_id' value="" name="origin_place_id">
+										<input type="hidden" id="destination_place_id" value="" name="destination_place_id">
+										<input type="hidden" id="origin_name" value="" name="origin_name">
+										<input type="hidden" id="destination_name" value="" name="destination_name">
+										
+										
+									</form>
+                                    <div class="form-group">
+                                        <button  onclick="getDirections()" type="text" class=" form-control btn btn-warning text-white btn-sm"><b>Confirm</b></button>
+                                    </div>
+									<form id="send_address" class="mt-4" action="" method="POST">
+										<h6 class="display-5">Enter Your Complete Address</h6><br>
+										<div class="form-group">
+											<input required type="text" class="form-control" id="floor" placeholder="HOUSE / FLAT / BLOCK NO.">
+										</div>
+										<div class="form-group">
+											<input required type="text" class="form-control" id="floor" placeholder="APARTMENT / COMPLEX NAME">
+										</div>
+										<div class="form-group">
+											<input required type="text" class="form-control" id="floor" placeholder="LANDMARK">
+										</div>
+										<div class="form-group">
+											<input required type="text" class="form-control" id="floor" placeholder="ZIPCODE">
+										</div>
+										<div class="form-group">
+											<button type="submit" class=" form-control btn btn-primary text-white"><b>Click to View Rides</b></button>
+										</div>
+									</form>
+								  </div>
+								</div>
+							  </div>
+							</div>
+						</div>
+						
+					</div>
+			</div>
+			<div class="col-lg-9">
+				<h2 class="border border-warning rounded mt-1 bg-dark text-white text-center" style="padding: 20px;">Ride Details 
+				  <span style="float:left" class="fas fa-taxi"></span>
+			   </h2>
+				  <br>
+			   <div class="row">
+				  <div class="col-lg-12">
+					 <div id ="map" style="height: 680px;">
+
+					 </div>
+				  </div>
+			   </div>
+			 </div> -->
         <div class="row">
-            <div class="col-lg-3" style=" height: 810px;">
-                <div class="" style="width: 100%; height: 50%;">
-                    <div class="">
+            <div class="col-lg-3" style=" height: 725px;">
+                <div class="card text-white bg-light" style="width: 100%; height: 100%;">
+                    <div class="card-body">
                         <div id="accordion">
                             <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h5 class="mb-0">
-                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                <button class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                     <i class="fa fa-home" aria-hidden="true"></i>&nbsp &nbsp
                                     Choose from a Saved Trip
                                 </button>
@@ -127,11 +120,11 @@
                                     <a href="">1. Home</a> 
                                 </div>
                             </div>
-                        </div>
+                            </div>
                             <div class="card">
                                 <div class="card-header id="headingTwo">
                                 <h5 class="mb-0">
-                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                    <button class="btn" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp &nbsp
                                     Enter new location
                                     </button>
@@ -139,7 +132,7 @@
                                 </div>
                                 <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
                                 <div class="card-body text-dark">
-                                    <h5 class="card-title">Enter Origin and Destination</h5>
+                                    <h6 class="card-title">Enter Origin and Destination</h6>
                                     <form id="send_location_info" class="mt-4" action="" method="POST">
                                         <div class="form-group">
                                         <input type="text" class="form-control" id="origin" placeholder="Origin">
@@ -153,11 +146,12 @@
                                         <input type="hidden" id='origin_lng' value="" name="origin_lng">
                                         <input type="hidden" id="destination_lng" value="" name="destination_lng">
                                     </form>
+                                    <br>
                                     <div class="form-group">
                                         <button onclick="getDirections()" type="text" class=" form-control btn btn-warning text-white btn-sm"><b>Confirm</b></button>
                                     </div>
                                     <br><br>
-                                    <h6 class="display-5">Enter Complete Address</h6>
+                                    <h6 class="card-title">Enter Complete Address</h6>
                                     
                                     <form id="send_address" class="mt-4" action="" method="POST">
                                         <div class="form-group">
@@ -175,10 +169,11 @@
                                         <div class="form-group">
                                             <input type="text" class="form-control" id="floor" placeholder="DIRECTIONS TO REACH">
                                         </div>
+                                        <br>
                                         <button type="submit" class="btn btn-primary">Submit</button>
                                     </form>
                                 </div>
-                            </div>
+                                </div>
                             </div>
                         </div>
                     <br><br>
@@ -188,8 +183,8 @@
             <div class="col-lg-9">
 				<br>
 			    <div class="row">
-				  <div class="col-lg-12" style="padding-right: 40px;"> 
-                    <div id="map" style="height: 700px;">
+				  <div class="col-lg-12" style="padding-right: 30px;"> 
+                    <div id="map" style="height: 680px;">
 
                     </div> 
 				  </div>
@@ -197,5 +192,5 @@
 			</div>
         </div>
     </section>
-
+    
     {% endblock %}
